# git-series-manager

./: Cargo.toml  flake.nix  home-manager.nix
src/: main.rs  utils.rs
